--- a/src/app/css/modal/css-modal.component.html
+++ b/src/app/css/modal/css-modal.component.html
@@ -5,7 +5,7 @@
 
 <section class="px-content">
   <h2>场景一：确认提交模态框</h2>
-  <button class="btn px-btn px-btn-primary" (click)="open1()">打开确认提交模态框</button>
+  <button class="px-btn px-btn-primary" (click)="open1()">打开确认提交模态框</button>
   <template #modal1_template>
     <div class="px-modal-header">
       <h4>确认</h4>
@@ -19,8 +19,8 @@
       </div>
     </div>
     <div class="px-modal-footer">
-      <button class="btn px-btn px-btn-primary">确认</button>
-      <button class="btn px-btn px-btn-cancel" (click)="modal1.close()">关闭</button>
+      <button class="px-btn px-btn-primary">确认</button>
+      <button class="px-btn px-btn-cancel" (click)="modal1.close()">关闭</button>
     </div>
   </template>
   <div class="h-20"></div>
@@ -28,7 +28,7 @@
   <pre class="px-pre" [ngbCollapse]="isCollapse1">
     <code class="px-code">
       //html
-      &lt;button class="btn px-btn px-btn-primary" (click)="open1()">打开确认提交模态框&lt;/button>
+      &lt;button class="px-btn px-btn-primary" (click)="open1()">打开确认提交模态框&lt;/button>
       &lt;template #modal1_template>
         &lt;div class="px-modal-header">
           &lt;h4>确认&lt;/h4>
@@ -42,8 +42,8 @@
           &lt;/div>
         &lt;/div>
         &lt;div class="px-modal-footer">
-          &lt;button class="btn px-btn px-btn-primary">确认&lt;/button>
-          &lt;button class="btn px-btn px-btn-cancel" (click)="modal1.close()">关闭&lt;/button>
+          &lt;button class="px-btn px-btn-primary">确认&lt;/button>
+          &lt;button class="px-btn px-btn-cancel" (click)="modal1.close()">关闭&lt;/button>
         &lt;/div>
       &lt;/template>
       
@@ -64,7 +64,7 @@
   </pre>
 
   <h2>场景二：确认删除模态框</h2>
-  <button class="btn px-btn px-btn-delete" (click)="open2()">打开确认删除模态框</button>
+  <button class="px-btn px-btn-delete" (click)="open2()">打开确认删除模态框</button>
   <template #modal2_template>
     <div class="px-modal-header">
       <h4>删除</h4>
@@ -78,8 +78,8 @@
       </div>
     </div>
     <div class="px-modal-footer">
-      <button class="btn px-btn px-btn-delete">删除</button>
-      <button class="btn px-btn px-btn-cancel" (click)="modal2.close()">关闭</button>
+      <button class="px-btn px-btn-delete">删除</button>
+      <button class="px-btn px-btn-cancel" (click)="modal2.close()">关闭</button>
     </div>
   </template>
   <div class="h-20"></div>
@@ -87,7 +87,7 @@
   <pre class="px-pre" [ngbCollapse]="isCollapse2">
     <code class="px-code">
       //html
-      &lt;button class="btn px-btn px-btn-delete" (click)="open2()">打开确认删除模态框&lt;/button>
+      &lt;button class="px-btn px-btn-delete" (click)="open2()">打开确认删除模态框&lt;/button>
       &lt;template #modal2_template>
         &lt;div class="px-modal-header">
           &lt;h4>删除&lt;/h4>
@@ -101,8 +101,8 @@
           &lt;/div>
         &lt;/div>
         &lt;div class="px-modal-footer">
-          &lt;button class="btn px-btn px-btn-delete">删除&lt;/button>
-          &lt;button class="btn px-btn px-btn-cancel" (click)="modal2.close()">关闭&lt;/button>
+          &lt;button class="px-btn px-btn-delete">删除&lt;/button>
+          &lt;button class="px-btn px-btn-cancel" (click)="modal2.close()">关闭&lt;/button>
         &lt;/div>
       &lt;/template>
 
