--- a/public/css/px-styles/progress.css
+++ b/public/css/px-styles/progress.css
@@ -1,6 +1,21 @@
 /*****************************/
 /* progress
 /****************************/
-.px-progress {
+.progress {
+    width: 200px;
+    height: 10px;
+    border-radius: 6px;
+    margin-bottom: 20px;
+}
 
+.progress[value] {
+    color: #00abff;
+}
+
+.progress[value]::-webkit-progress-bar {
+    background-color: #f2f2f2;
+}
+
+.progress[value]::-webkit-progress-value {
+    background-color: #00abff;
 }
