--- a/src/app/css/progress/css-progress.component.html
+++ b/src/app/css/progress/css-progress.component.html
@@ -5,5 +5,5 @@
 
 <section class="px-content">
   <h2>场景一：普通的</h2>
-  <progress class="px-progress px-progress-primary" value="25" max="100"></progress>
+  <progress class="progress" value="70" max="100"></progress>
 </section>
