--- a/src/app/css/progress/css-progress.component.html
+++ b/src/app/css/progress/css-progress.component.html
@@ -6,4 +6,11 @@
 <section class="px-content">
   <h2>场景一：普通的</h2>
   <progress class="progress" value="50" max="100"></progress>
+  <div class="h-20"></div>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse1 = !isCollapse1">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse1">
+    <code class="px-code">
+      &lt;progress class="progress" value="50" max="100">&lt;/progress>
+    </code>
+  </pre>
 </section>
