--- a/public/css/px-styles/progress.css
+++ b/public/css/px-styles/progress.css
@@ -19,3 +19,15 @@
 .progress[value]::-webkit-progress-value {
     background-color: #00abff;
 }
+
+.progress.progress-success[value] {
+    color: #73cf22;
+}
+
+.progress.progress-success[value]::-webkit-progress-bar {
+    background-color: #f2f2f2;
+}
+
+.progress.progress-success[value]::-webkit-progress-value {
+    background-color: #73cf22;
+}
