--- a/src/app/css/progress/css-progress.component.html
+++ b/src/app/css/progress/css-progress.component.html
@@ -27,4 +27,27 @@
       &lt;progress class="progress progress-alarm progress-striped" value="70" max="100">&lt;/progress>
     </code>
   </pre>
+  <h2>场景二：表格内的</h2>
+  <progress class="progress progress-table" value="50" max="100"></progress>
+  <progress class="progress progress-table progress-success" value="50" max="100"></progress>
+  <progress class="progress progress-table progress-attention" value="50" max="100"></progress>
+  <progress class="progress progress-table progress-alarm" value="50" max="100"></progress>
+  <progress class="progress progress-table progress-striped" value="70" max="100"></progress>
+  <progress class="progress progress-table progress-success progress-striped" value="70" max="100"></progress>
+  <progress class="progress progress-table progress-attention progress-striped" value="70" max="100"></progress>
+  <progress class="progress progress-table progress-alarm progress-striped" value="70" max="100"></progress>
+  <div class="h-20"></div>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse2 = !isCollapse2">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse2">
+    <code class="px-code">
+      &lt;progress class="progress progress-table" value="50" max="100">&lt;/progress>
+      &lt;progress class="progress progress-table progress-success" value="50" max="100">&lt;/progress>
+      &lt;progress class="progress progress-table progress-attention" value="50" max="100">&lt;/progress>
+      &lt;progress class="progress progress-table progress-alarm" value="50" max="100">&lt;/progress>
+      &lt;progress class="progress progress-table progress-striped" value="70" max="100">&lt;/progress>
+      &lt;progress class="progress progress-table progress-success progress-striped" value="70" max="100">&lt;/progress>
+      &lt;progress class="progress progress-table progress-attention progress-striped" value="70" max="100">&lt;/progress>
+      &lt;progress class="progress progress-table progress-alarm progress-striped" value="70" max="100">&lt;/progress>
+    </code>
+  </pre>
 </section>
