--- a/src/app/css/input/css-input.component.html
+++ b/src/app/css/input/css-input.component.html
@@ -31,7 +31,7 @@
   <h2>场景三：带有说明文字的</h2>
   <div class="px-input-wrapper">
     <input class="px-input lg" placeholder="带有说明文字的">
-    <span>内容说明：只能包含字母、数字及下划线</span>
+    <span class="notes">内容说明：只能包含字母、数字及下划线</span>
   </div>
   <div class="h-20"></div>
   <p><a role="button" class="a-btn-code-example" (click)="isCollapse3 = !isCollapse3">代码示例 <i class="fa fa-plus"></i></a></p>
@@ -39,7 +39,7 @@
     <code class="px-code">
       &lt;div class="px-input-wrapper">
         &lt;input class="px-input lg" placeholder="带有说明文字的">
-        &lt;span>内容说明：只能包含字母、数字及下划线&lt;/span>
+        &lt;span class="notes">内容说明：只能包含字母、数字及下划线&lt;/span>
       &lt;/div>
     </code>
   </pre>
