--- a/public/css/px-styles/form.css
+++ b/public/css/px-styles/form.css
@@ -1,3 +1,20 @@
 /*****************************/
 /* form
 /****************************/
+.px-form-control label {
+    margin-bottom: 0;
+    font-size: 14px;
+    color: #4d5761;
+    padding-right: 20px;
+    width: 200px;
+    text-align: right;
+    cursor: pointer;
+}
+
+.px-form-control .px-input-wrapper {
+    display: inline-block;
+}
+
+.px-form-control .px-select {
+    display: inline-block;
+}
