--- a/src/app/css/form/css-form.component.html
+++ b/src/app/css/form/css-form.component.html
@@ -25,10 +25,79 @@
         <input ngbDropdownToggle [(ngModel)]="cloudEnv" readonly placeholder="请选择" id="select1" name="cloudEnv">
         <i class="fa fa-caret-down"></i>
         <div class="dropdown-menu">
-          <button (click)="cloudEnv = '数据中心001'">数据中心001</button>
-          <button (click)="cloudEnv = '数据中心002'">数据中心002</button>
-          <button (click)="cloudEnv = '数据中心003'">数据中心003</button>
+          <button (click)="cloudEnv = '云环境1'">云环境1</button>
+          <button (click)="cloudEnv = '云环境2'">云环境2</button>
+          <button (click)="cloudEnv = '云环境3'">云环境3</button>
         </div>
+      </div>
+    </div>
+    <div class="px-form-control">
+      <label for="select2">所属DC</label>
+      <div ngbDropdown class="px-select">
+        <input ngbDropdownToggle [(ngModel)]="dc" readonly placeholder="请选择" id="select2" name="dc">
+        <i class="fa fa-caret-down"></i>
+        <div class="dropdown-menu">
+          <button (click)="dc = '数据中心1'">数据中心1</button>
+          <button (click)="dc = '数据中心2'">数据中心2</button>
+          <button (click)="dc = '数据中心3'">数据中心3</button>
+        </div>
+      </div>
+    </div>
+    <div class="px-form-control">
+      <label for="select3">网络类型</label>
+      <div ngbDropdown class="px-select">
+        <input ngbDropdownToggle [(ngModel)]="type" readonly placeholder="请选择" id="select3" name="type">
+        <i class="fa fa-caret-down"></i>
+        <div class="dropdown-menu">
+          <button (click)="type = 'VXLAN'">VXLAN</button>
+          <button (click)="type = 'VLAN'">VLAN</button>
+        </div>
+      </div>
+    </div>
+    <div class="px-form-control">
+      <label for="select4">段ID</label>
+      <div ngbDropdown class="px-select">
+        <input ngbDropdownToggle [(ngModel)]="tag" readonly placeholder="请选择" id="select4" name="tag">
+        <i class="fa fa-caret-down"></i>
+        <div class="dropdown-menu">
+          <button (click)="tag = '段1'">段1</button>
+          <button (click)="tag = '段2'">段2</button>
+        </div>
+      </div>
+    </div>
+    <div class="px-form-control">
+      <label for="input2">CIDR</label>
+      <div class="px-input-wrapper">
+        <input class="px-input lg" id="input2">
+        <span class="notes">格式说明：0.0.0.0/0</span>
+      </div>
+    </div>
+    <div class="px-form-control">
+      <label for="input3">可用地址池</label>
+      <div class="px-input-wrapper">
+        <input class="px-input sm" id="input3" placeholder="0.0.0.2">
+        <i class="link">-</i>
+        <input class="px-input sm" placeholder="0.0.0.254">
+      </div>
+    </div>
+    <div class="px-form-control">
+      <label for="input4">带宽</label>
+      <div class="px-input-wrapper">
+        <input class="px-input lg addon" id="input4">
+        <span class="addon">Mbps</span>
+      </div>
+    </div>
+    <div class="px-form-control">
+      <label>DHCP</label>
+      <div class="px-radio-group">
+        <label class="px-radio-wrapper">
+          <input type="radio" class="px-radio" name="radio1">
+          <span>是</span>
+        </label>
+        <label class="px-radio-wrapper">
+          <input type="radio" class="px-radio" name="radio1">
+          <span>否</span>
+        </label>
       </div>
     </div>
 
