--- a/src/app/css/form/css-form.component.html
+++ b/src/app/css/form/css-form.component.html
@@ -100,6 +100,9 @@
         </label>
       </div>
     </div>
-
   </form>
+  <div class="px-form-buttons">
+    <button class="px-btn px-btn-primary">创建</button>
+    <button class="px-btn px-btn-cancel">取消</button>
+  </div>
 </section>
