--- a/src/app/css/table/css-table.component.html
+++ b/src/app/css/table/css-table.component.html
@@ -1,3 +1,14 @@
 <section class="px-content-header">
   <h1>表格-Table</h1>
+  <small>支持分页</small>
+</section>
+
+<section class="px-content">
+  <div class="px-table-wrapper">
+    <div class="toolbar">
+      <button class="px-btn px-btn-success create">创建按钮</button>
+      <input class="search">
+    </div>
+  </div>
+
 </section>
