--- a/src/app/css/table/css-table.component.html
+++ b/src/app/css/table/css-table.component.html
@@ -7,7 +7,7 @@
   <div class="px-table-wrapper">
     <div class="toolbar">
       <button class="px-btn px-btn-success create">创建按钮</button>
-      <input class="search">
+      <input class="search" placeholder="输入关键字筛选">
     </div>
   </div>
 
