--- a/src/app/css/table/css-table.component.html
+++ b/src/app/css/table/css-table.component.html
@@ -9,6 +9,19 @@
       <button class="px-btn px-btn-success create">创建按钮</button>
       <input class="search" placeholder="输入关键字筛选">
     </div>
+    <table class="px-table">
+      <thead>
+      <tr>
+        <th></th>
+        <th>序号</th>
+        <th>用户名</th>
+        <th>角色</th>
+        <th>激活状态</th>
+        <th>在线状态</th>
+        <th>操作</th>
+      </tr>
+      </thead>
+    </table>
   </div>
 
 </section>
