--- a/src/app/css/table/css-table.component.html
+++ b/src/app/css/table/css-table.component.html
@@ -21,6 +21,26 @@
         <th>操作</th>
       </tr>
       </thead>
+      <tbody>
+      <tr>
+        <td></td>
+        <td>1</td>
+        <td>user1</td>
+        <td>admin</td>
+        <td>激活</td>
+        <td>在线</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>2</td>
+        <td>user2</td>
+        <td>admin</td>
+        <td>激活</td>
+        <td>在线</td>
+        <td></td>
+      </tr>
+      </tbody>
     </table>
   </div>
 
