--- a/public/css/px-styles/table.css
+++ b/public/css/px-styles/table.css
@@ -6,7 +6,8 @@
 }
 
 .px-table-wrapper .toolbar {
-    padding: 9px 0;
+    height: 54px;
+    padding-top: 9px;
 }
 
 .px-table-wrapper .toolbar button {
@@ -48,11 +49,27 @@
     font-weight: normal;
     height: 50px;
     background: #f8f8f8;
-    border-color: #e6e6e6;
+    border-top-color: #e6e6e6;
+    border-bottom-color: #e6e6e6;
+    border-right-color: #f2f2f2;
     border-style: solid;
     border-width: 1px 1px 1px 0;
 }
 
-.px-table th:last-child {
+.px-table tr th:last-child {
+    border-right: 0;
+}
+
+.px-table td {
+    font-size: 14px;
+    color: #7c868d;
+    height: 50px;
+    background: #fff;
+    border-color: #f2f2f2;
+    border-style: solid;
+    border-width: 0 1px 1px 0;
+}
+
+.px-table tr td:last-child {
     border-right: 0;
 }
