--- a/public/css/px-styles/table.css
+++ b/public/css/px-styles/table.css
@@ -64,7 +64,6 @@
     font-size: 14px;
     color: #7c868d;
     height: 50px;
-    background: #fff;
     border-color: #f2f2f2;
     border-style: solid;
     border-width: 0 1px 1px 0;
@@ -72,4 +71,8 @@
 
 .px-table tr td:last-child {
     border-right: 0;
+}
+
+.px-table tbody tr:hover {
+    background-color: #e7f6ff;
 }
