--- a/src/app/css/table/css-table.component.html
+++ b/src/app/css/table/css-table.component.html
@@ -12,7 +12,7 @@
     <table class="px-table">
       <thead>
       <tr>
-        <th></th>
+        <th><input type="checkbox" class="px-checkbox"></th>
         <th>序号</th>
         <th>用户名</th>
         <th>角色</th>
@@ -23,7 +23,7 @@
       </thead>
       <tbody>
       <tr>
-        <td></td>
+        <td><input type="checkbox" class="px-checkbox"></td>
         <td>1</td>
         <td>user1</td>
         <td>admin</td>
@@ -32,7 +32,7 @@
         <td></td>
       </tr>
       <tr>
-        <td></td>
+        <td><input type="checkbox" class="px-checkbox"></td>
         <td>2</td>
         <td>user2</td>
         <td>admin</td>
